# thesis

./: .gitignore  pyproject.toml  pytest_fail_output.txt  pytest_lf_output.txt  pytest_output.txt  requirements.txt  run_all.ps1
configs/: circuit_discovery_eap_ig.yaml  circuit_discovery_lrp.yaml  evaluate_circuits_eap_ig.yaml  evaluate_circuits_lrp.yaml  pruning_circuit_locked.yaml  pruning_magnitude.yaml
data/greater_than/: dataset.json
data/ioi/: dataset.json
data/tool_selection/: dataset.json
experiments/: compare_circuits.py  evaluate_circuits.py  run_circuit_discovery.py  run_lrp_discovery.py  run_pruning_experiment.py  run_pruning_sweep.py
scripts/: run_from_config.py
src/circuits/: __init__.py  eap_ig.py  lrp.py
src/compression/: ablator.py  pruning_core.py
src/datasets/: __init__.py  arithmetic.py  greater_than.py  ioi.py  tool_selection.py
src/evaluation/: metrics.py
src/utils/: aggregation.py  data.py  logging.py  tokenization.py  tool_selection.py
tests/: test_lrp_conservation.py  test_metrics.py  test_pipeline_regressions.py  test_smoke.py
